--- a/src/App.css
+++ b/src/App.css
@@ -16,15 +16,16 @@ body {
 }
 
 .App {
-  margin-top: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 2rem;
+  width: 100vw;
   height: 100vh;
 }
 
 .header.header--main {
+  padding-top: 20px;
   font-size: 5.2rem;
 }
 
@@ -74,10 +75,26 @@ body {
 
 .table-content {
   display: flex;
-  justify-content: space-around;
-  font-size: 2.4rem;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  font-size: 3rem;
+  gap: 5rem;
+}
+
+.table__col {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-grow: 1;
+  gap: 1rem;
 }
 
 .table-row {
-  font-size: 2rem;
+  font-size: 2.4rem;
+}
+
+.account-address {
+  color: #bae8e8;
+  text-decoration: underline;
 }
